--- a/pdf-swing/pom.xml
+++ b/pdf-swing/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.librepdf</groupId>
         <artifactId>openpdf-parent</artifactId>
-        <version>1.3.30.jaspersoft.1-SNAPSHOT</version>
+        <version>1.3.30.jaspersoft.1</version>
     </parent>
 
     <artifactId>pdf-swing</artifactId>
